# tailshare

./: Cargo.toml  README.md
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast-extension/src/: get-clipboard.ts  install-cli.tsx  list-devices.tsx  send-clipboard.ts  send-to-device.tsx  utils.ts
src/: cli.rs  clipboard.rs  config.rs  file.rs  main.rs  platform.rs  ssh.rs  sync.rs  tailscale.rs
