[package]
name = "tailshare"
version = "0.1.0"
edition = "2021"
description = "Share clipboard and files across machines over Tailscale"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
toml = "0.8"
colored = "2"
